; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit_tree.c_insert_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit_tree.c_insert_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audit_chunk = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.list_head = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.audit_chunk*)* @insert_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @insert_hash(%struct.audit_chunk* %0) #0 {
  %2 = alloca %struct.audit_chunk*, align 8
  %3 = alloca %struct.list_head*, align 8
  store %struct.audit_chunk* %0, %struct.audit_chunk** %2, align 8
  %4 = load %struct.audit_chunk*, %struct.audit_chunk** %2, align 8
  %5 = getelementptr inbounds %struct.audit_chunk, %struct.audit_chunk* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.list_head* @chunk_hash(i32 %7)
  store %struct.list_head* %8, %struct.list_head** %3, align 8
  %9 = load %struct.audit_chunk*, %struct.audit_chunk** %2, align 8
  %10 = getelementptr inbounds %struct.audit_chunk, %struct.audit_chunk* %9, i32 0, i32 0
  %11 = load %struct.list_head*, %struct.list_head** %3, align 8
  %12 = call i32 @list_add_rcu(i32* %10, %struct.list_head* %11)
  ret void
}

declare dso_local %struct.list_head* @chunk_hash(i32) #1

declare dso_local i32 @list_add_rcu(i32*, %struct.list_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
